# gguf

./: Cargo.toml  README.md
.github/workflows/: build.yml
ggml-quants/: CHANGELOG.md  Cargo.toml  README.md
ggml-quants/src/: lib.rs  structs.rs
ggml-quants/src/structs/: half.rs  iq1m.rs  iq1s.rs  iq2s.rs  iq2xs.rs  iq2xxs.rs  iq3s.rs  iq3xxs.rs  iq4nl.rs  iq4xs.rs  q2_k.rs  q3_k.rs  q4_0.rs  q4_1.rs  q4_k.rs  q5_0.rs  q5_1.rs  q5_k.rs  q6_k.rs  q8_0.rs  q8_1.rs  q8_k.rs
ggus/: CHANGELOG.md  Cargo.toml  README.md
ggus/src/: file.rs  header.rs  lib.rs  read.rs  tensor.rs
ggus/src/metadata/: collection.rs
ggus/src/name/: mod.rs  shard.rs  size_label.rs  type.rs  version.rs
ggus/src/write/: file_writer.rs  simulator.rs  writer.rs
xtask/: CHANGELOG.md  Cargo.toml  README.md
xtask/src/: cast.rs  convert.rs  diff.rs  main.rs  merge.rs  set_meta.rs  show.rs  split.rs  tests.rs
xtask/src/tests/: cli_test.rs  convert_test.rs  diff_test.rs  integration_test.rs  merge_test.rs  set_meta_test.rs  show_test.rs  split_test.rs  utils_test.rs
xtask/src/utils/: diff.rs  file_info.rs  mod.rs  output.rs  read.rs  write.rs
xtask/src/utils/operator/: cast.rs  merge.rs  mod.rs  permute_qk.rs  set_meta.rs  sort.rs  to_llama.rs
