[package]
name = "ggus"
description = "GGUF in Rust🦀"
version = "0.5.0"
edition.workspace = true
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/InfiniTensor/gguf"
documentation = "https://docs.rs/ggus"
license = "MIT"
readme = "README.md"
keywords = ["gguf", "ggml", "llama-cpp"]
categories = ["parsing", "parser-implementations", "encoding"]

[dependencies]
ggml-quants = { version = "0.1", path = "../ggml-quants" }
indexmap.workspace = true
regex.workspace = true
log.workspace = true
num_enum = "0.7"

[features]
default = ["types"]
types = ["ggml-quants/types"]
