[package]
name = "gguf-utils"
description = "Utilities for handling gguf files"
version = "0.2.0"
edition.workspace = true
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/InfiniTensor/gguf"
documentation = "https://docs.rs/gguf-utils"
license = "MIT"
readme = "README.md"
keywords = ["gguf", "ggml", "llama-cpp"]

[dependencies]
indexmap.workspace = true
regex.workspace = true
log.workspace = true
mem-rearrange = "0.1"
itertools = "0.14"
memmap2 = "0.9"
ggus = { path = "../ggus", version = "0.5" }
clap = { version = "4.5", features = ["derive"] }

time = "0.3"
simple_logger = "5.0"
